--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,16 @@
-.outer-square {
-  /* your css goes here */
+.outer-square{
+    width: 600px;
+    height: 600px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    
 }
-.inner-square {
-  /* your css goes here */
+.Inner-square{
+    margin: 10px;
+    background-color: green; 
 }
-.circle {
-  /* your css goes here */
+.circle{
+     margin: 10px;
+     background-color: blue;
+     border-radius: 50%;
 }
